--- a/style.css
+++ b/style.css
@@ -462,9 +462,8 @@ width: 100%;
   box-sizing: border-box;
       border-radius: 15px;
       text-align: center;
-      background-color: rgb(190, 186, 186);
+      background-color: rgba(0,0,0, 0.4);
       border: 1px rgb(200, 255, 0) solid;
-      color: #000000;
       flex-grow: 0;
     flex-shrink: 10;
     flex-basis: 100%;
@@ -472,7 +471,6 @@ width: 100%;
 
 .wed:hover,
 .wed:focus{
-  background-color: #888888;
-  color: #000000;
+  background-color: rgba(0,0,0, 0.2);
   box-shadow: 0px 5px 50px -3px #c3ff00;;
 }
